# reachy-demo

./: .gitignore  CLAUDE.md  README.md
bot/: main.py  nat_vision_llm.py  pyproject.toml
bot/services/: chinese_converter.py  processor.py  reachy_service.py  wobbler.py
nat/: pyproject.toml
nat/src/ces_tutorial/: __init__.py  config.yml  openai_chat_request.py  register.py
nat/src/ces_tutorial/functions/: __init__.py  router.py  router_agent.py
scripts/: run-demo.sh  start-vllm.sh  status.sh  stop-all.sh  stop-vllm.sh
